# game-of-life

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh  test.sh
cmake/: Boost.cmake  Eigen.cmake  SuperBuild.cmake
doc/: report.tex
extras/: txt_to_video.py
extras/gcc-4.9-bin/lib/: libasan.1.dylib  libasan.la  libatomic.1.dylib  libatomic.la  libcilkrts.5.dylib  libcilkrts.la  libgcc_ext.10.4.dylib  libgcc_ext.10.5.dylib  libgfortran.3.dylib  libgomp.1.dylib  libitm.1.dylib  libquadmath.0.dylib  libssp.0.dylib  libstdc++.6.dylib  libstdc++.a-gdb.py  libstdc++.la  libsupc++.la  libubsan.0.dylib  libubsan.la
extras/gcc-4.9-bin/lib/i386/: libasan.1.dylib  libasan.la  libatomic.1.dylib  libatomic.la  libcilkrts.5.dylib  libcilkrts.la  libgfortran.3.dylib  libgomp.1.dylib  libitm.1.dylib  libquadmath.0.dylib  libssp.0.dylib  libstdc++.6.dylib  libstdc++.a-gdb.py  libstdc++.la  libsupc++.la  libubsan.0.dylib  libubsan.la
extras/gcc-4.9-bin/share/info/: cpp.info  cppinternals.info  dir  gcc.info  gccinstall.info  gccint.info  gfortran.info  libgomp.info  libitm.info  libquadmath.info
extras/gcc-4.9-bin/share/man/man1/: cpp.1  gcc.1  gcov.1  (+1 more)
inc/: board.h  cell.h  commandlinereader.h  exception.h  filereader.h  filewriter.h  gameoflife.h  notenoughargumentsexception.h
libs/eigen/cmake/src/: eigen-eigen-3.2.2.1.tar.bz2  eigen-eigen-3.2.2.1.tar.bz2.md5
libs/eigen/cmake/tmp/: Eigen-cfgcmd.txt
src/: CMakeLists.txt  board.cpp  cell.cpp  commandlinereader.cpp  gameoflife.cpp  main.cpp
test/: .test.cpp.swp  CMakeLists.txt  input.txt  test.cpp
(+21 files in other folders)
